# backend-sandbox-service

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Pipfile  README.md  config.yml  config.yml-template  conftest.py  manage.py  pip.conf  pyproject.toml  supervisord.conf  tox.ini
.github/workflows/: github-actions.yml
ansible/: requirements.yml
crczp/sandbox_ansible_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
crczp/sandbox_cloud_app/: apps.py  serializers.py  urls.py  views.py
crczp/sandbox_common_lib/: cloud_utils.py  common_cloud.py  crczp_config.py  crczp_config_validation.py  crczp_service_config.py  exc_handler.py  exceptions.py  git_config.py  inspectors.py  log_output_mixin.py  logfilters.py  netbird_client.py  pagination.py  permissions.py  serializers.py  swagger_typing.py  utils.py
crczp/sandbox_definition_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
crczp/sandbox_instance_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
crczp/sandbox_service_project/: settings.py  urls.py  wsgi.py
crczp/sandbox_uag/: auth.py  exceptions.py  oidc_jwt.py  permissions.py
docs/source/: conf.py  crczp.sandbox_ansible_app.rst  crczp.sandbox_common_lib.rst  crczp.sandbox_definition_app.rst  crczp.sandbox_instance_app.rst  crczp.sandbox_service_project.rst  index.rst  kypo.sandbox_ansible_app.rst  kypo.sandbox_common_lib.rst  kypo.sandbox_definition_app.rst  kypo.sandbox_instance_app.rst  kypo.sandbox_service_project.rst
etc/: lighttpd.conf  nginx.conf
kypo/: _openstack_driver  _topology_definition  config.yml
kypo/common/: config.py
kypo/sandbox_ansible_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
kypo/sandbox_ansible_runs/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
kypo/sandbox_cloud_app/: apps.py  serializers.py  urls.py  views.py
kypo/sandbox_common/: config.py  exc_handler.py  exceptions.py  inspectors.py  pagination.py  permissions.py  sshconfig.py  utils.py
kypo/sandbox_common_lib/: cloud_utils.py  common_cloud.py  config.py  exc_handler.py  exceptions.py  git_config.py  git_repos.py  gitlab.py  inspectors.py  kypo_config.py  kypo_config_validation.py  kypo_service_config.py  pagination.py  serializers.py  sshconfig.py  swagger_typing.py  utils.py
kypo/sandbox_definition_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
kypo/sandbox_definitions/: apps.py  definition_service.py  models.py  serializers.py  urls.py  views.py
kypo/sandbox_instance_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
kypo_sandbox_ansible_runs/: apps.py
kypo_sandbox_definitions/: apps.py
kypo_sandbox_instances/: apps.py
kypo_sandbox_project/: settings.py  urls.py  wsgi.py
tofu/: openstack.tf  tofu.rc
(+357 files in other folders)
